--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -7,4 +7,28 @@
       <hr class="border-t border-blue-300 opacity-50" />
     </div>
   </div>
+
+  <nav class="mt-4">
+    <ul class="flex justify-center space-x-6 text-white font-semibold">
+      <li>
+        <a href="" class="hover:text-yellow-300">Galeria</a>
+      </li>
+      <li>
+        <a href="paginas/categorias" class="hover:text-yellow-300">Categorias</a>
+      </li>
+      <li>
+        <a href="" class="hover:text-yellow-300">Lugares</a>
+      </li>
+      <li>
+        <a href="" class="hover:text-yellow-300">Sair</a>
+      </li>
+
+    </ul>
+  </nav>
 </header>
+
+<router-outlet></router-outlet>
+
+<footer class="bg-gray-200 text-center p-4 mt-6">
+  <p class="text-gray-600 text-sm">Lugares para se visitar em 2025. Todos os direitos reservados.</p>
+</footer>
