Criado o formulário para a página da categoria

--- a/src/app/categorias/categoria/categoria.html
+++ b/src/app/categorias/categoria/categoria.html
@@ -1,1 +1,33 @@
-<p>categoria works!</p>
+<div class="p-6 max-w-lg mx-auto bg-white shadow-lg rounded-lg mt-6">
+  <h2 class="text-2x1 font-semibold text-gray-700 mg-4">Nova categoria</h2>
+  <hr/>
+  <form action="" id="categoriaForm">
+    <div class="mb-4">
+      <label class="block text-gray-600 font-medium mb-2" for="">Nome</label>
+      <input type="text"
+             id="nome"
+             name="nome"
+             placeholder="Ex: Restaurantes, praias, shopping"
+             class="w-full p-3 border border-gray-300 rounded shadow-sm focus:ring focus:ring-blue-400"
+             required
+            />
+      <span class="text-red-500 text-sm">Campo obrigatório</span>
+    </div>
+
+    <div class="mb-4">
+      <label class="block text-gray-600 font-medium mb-2" for="">Descrição</label>
+      <textarea
+            rows="4"
+            id="descricao"
+            name="descricao"
+            placeholder="Ex: Restaurantes, praias, shopping"
+            class="w-full p-3 border border-gray-300 rounded shadow-sm focus:outline-none focus:ring focus:ring-blue-400"
+            required
+      >
+      </textarea>
+      <span class="text-red-500 text-sm">Campo obrigatório</span>
+    </div>
+
+    <button type="submit" class="w-full bg-blue-600 text-white font-semibold p-3 rounded shadow hover:bg-blue-700">Cadastrar categoria</button>
+  </form>
+</div>
