--- a/src/app/categorias/categoria/categoria.html
+++ b/src/app/categorias/categoria/categoria.html
@@ -12,7 +12,7 @@
              class="w-full p-3 border border-gray-300 rounded shadow-sm focus:ring focus:ring-blue-400"
              required
             />
-      <span class="text-red-500 text-sm">Campo obrigatório</span>
+      <span class="text-red-500 text-sm" *ngIf="isCampoInvalido('nome')">Campo obrigatório</span>
     </div>
 
     <div class="mb-4">
@@ -27,7 +27,7 @@
             required
       >
       </textarea>
-      <span class="text-red-500 text-sm">Campo obrigatório</span>
+      <span class="text-red-500 text-sm" *ngIf="isCampoInvalido('descricao')">Campo obrigatório</span>
     </div>
 
     <button type="submit" class="w-full bg-blue-600 text-white font-semibold p-3 rounded shadow hover:bg-blue-700">Cadastrar categoria</button>
