Configurado aba lugares no module do template e de lugares

--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -17,7 +17,7 @@
         <a href="paginas/categorias" class="hover:text-yellow-300">Categorias</a>
       </li>
       <li>
-        <a href="" class="hover:text-yellow-300">Lugares</a>
+        <a href="paginas/lugares" class="hover:text-yellow-300">Lugares</a>
       </li>
       <li>
         <a href="" class="hover:text-yellow-300">Sair</a>
