Adicionado select e options de Avaliação

--- a/src/app/lugares/lugar/lugar.html
+++ b/src/app/lugares/lugar/lugar.html
@@ -54,10 +54,23 @@
 
     <div class="mb-4">
       <label class="block text-gray-600 font-medium mb-2" for="avaliacao">Avaliação</label>
+      <select
+        name="avaliacao"
+        id="avaliacao"
+        formControlName="avaliacao"
+        class="w-full p-3 border border-gray-300 rounded shadow-sm focus:outline-none focus:ring focus:ring-blue-400"
+      >
+      <option [value]="">Selecione uma avaliacao</option>
+      <option [value]="1">1 - Ruim</option>
+      <option [value]="2">2 - Regular</option>
+      <option [value]="3">3 - Bom</option>
+      <option [value]="4">4 - Muito bom</option>
+      <option [value]="5">5 - Excelente</option>
+      </select>
     </div>
-  </form>
 
   <button type="submit" class="w-full bg-blue-600 text-white font-semibold p-3 rounded shadow hover:bg-blue-700">
     Cadastrar lugar
   </button>
+  </form>
 </div>
