--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -11,7 +11,7 @@
   <nav class="mt-4">
     <ul class="flex justify-center space-x-6 text-white font-semibold">
       <li>
-        <a href="" class="hover:text-yellow-300">Galeria</a>
+        <a href="paginas/galeria" class="hover:text-yellow-300">Galeria</a>
       </li>
       <li>
         <a href="paginas/categorias" class="hover:text-yellow-300">Categorias</a>
