--- a/src/app/galeria/galeria/galeria.html
+++ b/src/app/galeria/galeria/galeria.html
@@ -1,1 +1,13 @@
-<p>galeria works!</p>
+<div class="p-4 bg-white shadow">
+  <div class="flex flex-col md:flex-row items-center justify-center gap-4">
+    <input type="text"
+           placeholder="Pesquisar pelo nome do local"
+           class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400"
+    />
+
+    <select class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400" name="" id="">
+      <option [value]="">Todas as categorias</option>
+      <option *ngFor="let cat of categorias" [value]="cat.nome">{{ cat.nome }}</option>
+    </select>
+  </div>
+</div>
