implementado a renderização das quantidades de estrela em cada card

--- a/src/app/galeria/galeria/galeria.html
+++ b/src/app/galeria/galeria/galeria.html
@@ -20,7 +20,7 @@
         <p class="text-gray-500">Categoria: <span class="text-blue-600">{{ lugar.categoria }}</span></p>
         <p class="text-gray-500">Localização: <span class="text-blue-600">{{ lugar.localizacao }}</span></p>
         <div class="mt-2 flex items-center">
-          <span class="text-yellow-500">Estrelas</span>
+          <span class="text-yellow-500" [innerHTML]="getEstrelas(lugar)"></span>
           <span class="ml-2 text-gray-600">{{ lugar.avaliacao }}</span>
         </div>
     </div>
