--- a/src/app/galeria/galeria/galeria.html
+++ b/src/app/galeria/galeria/galeria.html
@@ -1,16 +1,22 @@
-<div class="p-4 bg-white shadow">
-  <div class="flex flex-col md:flex-row items-center justify-center gap-4">
-    <input type="text"
-           placeholder="Pesquisar pelo nome do local"
-           class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400"
-    />
+<form #frm="ngForm" (submit)="obterLugaresFiltrado()">
+  <div class="p-4 bg-white shadow">
+    <div class="flex flex-col md:flex-row items-center justify-center gap-4">
+      <input type="text"
+             placeholder="Pesquisar pelo nome do local"
+             class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400"
+             name="nomeFiltro"
+             [(ngModel)]="nomeFiltro"
+      />
 
-    <select class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400" name="" id="">
-      <option [value]="">Todas as categorias</option>
-      <option *ngFor="let cat of categorias" [value]="cat.nome">{{ cat.nome }}</option>
-    </select>
+      <select class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400" name="categ" [(ngModel)]="categoriaFiltro">
+        <option [value]="">Todas as categorias</option>
+        <option *ngFor="let cat of categorias" [value]="cat.nome">{{ cat.nome }}</option>
+      </select>
+
+      <button (click)="obterLugaresFiltrado()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-800">Pesquisar</button>
+    </div>
   </div>
-</div>
+</form>
 
 <div id="lugaresList" class="p-4 grid grid-col-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
   <div class="bg-white shadow rounded overflow-hidden" *ngFor="let lugar of lugares">
