--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -11,16 +11,16 @@
   <nav class="mt-4">
     <ul class="flex justify-center space-x-6 text-white font-semibold">
       <li>
-        <a href="paginas/galeria" class="hover:text-yellow-300">Galeria</a>
+        <a routerLink="/paginas/galeria" class="hover:text-yellow-300">Galeria</a>
       </li>
       <li>
-        <a href="paginas/categorias" class="hover:text-yellow-300">Categorias</a>
+        <a routerLink="/paginas/categorias" class="hover:text-yellow-300">Categorias</a>
       </li>
       <li>
-        <a href="paginas/lugares" class="hover:text-yellow-300">Lugares</a>
+        <a routerLink="/paginas/lugares" class="hover:text-yellow-300">Lugares</a>
       </li>
       <li>
-        <a href="" class="hover:text-yellow-300">Sair</a>
+        <a routerLink="" class="hover:text-yellow-300">Sair</a>
       </li>
 
     </ul>
