--- a/src/app/categorias/categoria/categoria.html
+++ b/src/app/categorias/categoria/categoria.html
@@ -1,5 +1,5 @@
 <div class="p-6 max-w-lg mx-auto bg-white shadow-lg rounded-lg mt-6">
-  <h2 class="text-2x1 font-semibold text-gray-700 mg-4">Nova categoria</h2>
+  <h2 class="text-2xl font-semibold text-gray-700 mg-4">Nova categoria</h2>
   <hr/>
   <form action="" id="categoriaForm" [formGroup]="camposForm" (ngSubmit)="salvar()">
     <div class="mb-4">
