--- a/src/app/lugares/lugar/lugar.html
+++ b/src/app/lugares/lugar/lugar.html
@@ -1,5 +1,5 @@
 <div class="p-6 max-w-lg mx-auto bg-white shadow-lg rounded-lg mt-6">
-  <h2 class="text-2x1 font-semibold text-gray-700 mg-4">Novo lugares</h2>
+  <h2 class="text-2xl font-semibold text-gray-700 mg-4">Novo lugares</h2>
   <hr/>
 
   <form id="lugarForm" [formGroup]="camposForm" (ngSubmit)="salvar()">
