--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -1,6 +1,6 @@
 <header class="bg-gradient-to-r from-blue-500 to-blue-700 text-white p-6 shadow-lg">
   <div class="text-center">
-    <h1 class="text-3x1 font-bold">{{ props.titulo }}</h1>
+    <h1 class="text-3xl font-bold">{{ props.titulo }}</h1>
     <p class="text-lg mt-2">{{ props.subTitulo }}</p>
 
     <div class="mt-4">
