--- a/src/app/autenticacaopagina/autenticacaopagina.html
+++ b/src/app/autenticacaopagina/autenticacaopagina.html
@@ -1,18 +1,19 @@
-<div class="bg-gradient-to-r from-blue-500 to-blue-700 text-white flex flex-col justify-center items-center">
+<div class=" py-10 bg-gradient-to-r from-blue-500 to-blue-700 text-white flex flex-col justify-center items-center">
   <div class="text-center px-6">
     <h1 class="text-4xl font-bold mb-4">Bem-vindo à sua lista de lugares favoritos!</h1>
     <p class="text-lg mb-6">Explore, organize e compartilhe os lugares incríveis que voc6e mais gosta. Tudo em só lugar.</p>
 
     <button class="bg-white text-blue-400 font-semibold py-3 px-8 rounded-full hover:bg-gray-100 flex space-x-3 items-center"
             (click)="navegar()"
-            *ngIf="isLogado()">
+            >
       Olá {{ profile?.nome }}, clique aqui para aproveitar o site
     </button>
+    <!--
     <button class="bg-white text-blue-700 font-semibold py-3 px-8 rounded-full hover:bg-gray-100 flex space-x-3 items-center"
             (click)="logar()"
-            *ngIf="!isLogado()">
+            >
       <img width="40px" src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Google-512.png" />
       Logar com o Google
-    </button>
+    </button>-->
   </div>
 </div>
