--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -20,7 +20,7 @@
         <a routerLink="/paginas/lugares" class="hover:text-yellow-300">Lugares</a>
       </li>
       <li>
-        <a routerLink="" class="hover:text-yellow-300">Sair</a>
+        <a (click)="logout()" routerLink="" class="hover:text-yellow-300">Sair</a>
       </li>
 
     </ul>
